Set image as modified after a legacy action

This enables the Channel Docker to update itself when e.g. converting a
single lone transparency layer to a paint layer.

BUG: 417992