libs/image/kis_legacy_undo_adapter.cpp
@@ -51,6 +51,10 @@ void KisLegacyUndoAdapter::addCommand(KUndo2Command *command)
         m_image->barrierLock();
         undoStore()->addCommand(command);
         m_image->unlock();
+
+        /// Sometimes legacy commands forget to emit sigImageModified() signal,
+        /// it causes dockers to be updated in correctly. Let's help them.
+        m_image->setModified();
     }
 }
 
@@ -73,5 +77,9 @@ void KisLegacyUndoAdapter::endMacro()
         m_image->unlock();
     }
     undoStore()->endMacro();
+
+    /// Sometimes legacy commands forget to emit sigImageModified() signal,
+    /// it causes dockers to be updated in correctly. Let's help them.
+    m_image->setModified();
 }
 
